Fix markup, buttons alignment and CSS

--- a/sylva/base/static/css/base.css
+++ b/sylva/base/static/css/base.css
@@ -481,7 +481,7 @@ ul#box-nav li {
 }
 
 .body-inside {
-    min-height: 100px;
+    min-height: 200px;
 }
 
 #main #footer.global {
@@ -640,16 +640,19 @@ span.buttonLinkOption {
     display: inline-block;
     margin-top: 2px;
     margin-left: 2px;
+}
+
+span.buttonLinkOption a {
+    font-weight: bold;
+}
+
+span.buttonLinkLeft {
     float: left;
 }
 
 span.buttonLinkRight {
     padding-top: 6px;
     padding-left: 4px;
-}
-
-span.buttonLinkOption a {
-    font-weight: bold;
 }
 
 p.forgot-password {
